--- a/config.json
+++ b/config.json
@@ -23,8 +23,8 @@
         "reprocessed": true,
         "flare_filtered": true,
         "merge_data": true,
-        "flux_maps": false,
-        "remove_point_source": false,
+        "flux_maps": true,
+        "remove_point_source": true,
         "countour_binning": false,
         "convert_region_coordinates": false,
         "extract_spectra": false,
